pipeline/platform-agnostic/minio/minio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: minio-service
    application-crd-id: kubeflow-pipelines
  name: minio
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /minio
    rewrite:
      uri: /minio
    route:
    - destination:
        host: minio-service.kubeflow.svc.cluster.local
        port:
          number: 9000
    timeout: 300s
